# labs_etu

./: .gitmodules  README.md  lab1.c
OOP_Game/Objects/: CellObject.h
OOP_Game/Tools/: CellPoint.cpp  Grid.cpp
labsAaSD/cw11_Btree_AVLtree/: .gitignore  AVLTree.cpp  AVLTree.h  BTree.cpp  BTree.h  CMakeLists.txt  main.cpp
labsAaSD/lab1_tree/: CMakeLists.txt  main.cpp  test.h
labsAaSD/lab2_sort/: .gitignore  CMakeLists.txt
labsAaSD/lab3_priority_queue/: CMakeLists.txt
labsAaSD/lab4_Rabin_Karp/: .gitignore  CMakeLists.txt
labsAaSD/lab4_Rabin_Karp/sources/: main.cpp  solve.hpp
labsAaSD/lab4_Rabin_Karp/tests/: tests.cpp
labsC/: lab1.c
labsC/cw1_V13/: Makefile  main.c  sentence.c  sentence.h  start.c  test.c  test2.c  text.c  text.h  word.c  word.h
labsC/cw2_V9/: BMP_edit.cpp  BMP_edit.h  Byte.h  CMakeLists.txt  Makefile  README.md  bmp.cpp  changergbfilterform.cpp  createsquareform.cpp  drawcircleform.cpp  main.cpp  mainwindow.cpp  opensaveimageform.cpp  rotatefragmentform.cpp
labsC/cw2_V9/src/: CMakeLists.txt  createsquareform.cpp  icon.qrc  main.cpp  mainwindow.cpp  makeframeform.cpp
labsC/cw2_V9/src/bmp_libs/: BMP_edit.cpp  BMP_edit.h  Byte.h
labsC/cw2_V9/src/forms/: changergbfilterform.ui  drawcircleform.ui  mainwindow.ui  makeframeform.ui  rotatefragmentform.ui
labsC/cw2_V9/src/libs/: changergbfilterform.h  drawcircleform.h  mainwindow.h  makeframeform.h
labsC/lab1/: lab1.c
labsC/lab2_makefile/: Makefile  diff.c  diff.h  max.c  max.h  menu  menu.c  min.c  min.h  sum.c  sum.h
labsC/lab3_using_pointers/: lab3.c  main.c
labsC/lab4_stdlibC/: lab1.c  Отчёт.docx
labsC/lab5_list/: 0304_PR_Shkvirya_EV_LB2  lab2.c
labsC/lab6_file_system/: lab6.c
labsC/lab7_CPP/: .~lock.Отчёт.docx#  lab7.cpp  (+1 more)
labsCompGraphics/compGraphics/: CMakeLists.txt
labsCompGraphics/compGraphics/app/: App.h  main.cpp
labsCompGraphics/compGraphics/labs/: Lab1Primitives.cpp  Lab1Primitives.h
labsCompGraphics/compGraphics/labs/lab1/: Lab1Primitives.cpp  Lab1Primitives.h
labsCompGraphics/compGraphics/labs/lab2/: Lab2Primitives.cpp  Lab2Primitives.h
labsCompGraphics/compGraphics/labs/lab3/: Lab3Fractals.cpp  Lab3Fractals.h  Point.cpp  Point.h  Vector.cpp  Vector.h
labsCompGraphics/compGraphics/labs/lab4/: Lab4Spline.cpp  Lab4Spline.h
labsCompGraphics/compGraphics/labs/lab5/: Lab5Shaders.cpp  Lab5Shaders.h  frag.vsh  vert.vsh
labsCompGraphics/compGraphics/labs/lab6/: Painter.cpp  Painter.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h
labsCompGraphics/compGraphics/ui/lab1Window/: lab1widget.cpp  lab1widget.h  lab1widget.ui
labsCompGraphics/compGraphics/ui/lab2Window/: lab2widget.cpp  lab2widget.h  lab2widget.ui
labsCompGraphics/compGraphics/ui/lab3Window/: lab3widget.cpp  lab3widget.h  lab3widget.ui
labsCompGraphics/compGraphics/ui/lab4Window/: lab4widget.cpp  lab4widget.h  lab4widget.ui
labsCompGraphics/compGraphics/ui/lab5Window/: lab5widget.cpp  lab5widget.h  lab5widget.ui
labsCompGraphics/compGraphics/ui/lab6Window/: lab6widget.cpp  lab6widget.h  lab6widget.ui
labsCompGraphics/compGraphics/ui/openGLWidget/: OpenGLWidget.cpp  OpenGLWidget.h  OpenGLWidgetLab3.cpp  OpenGLWidgetLab3.h  OpenGLWidgetLab4.cpp  OpenGLWidgetLab4.h  OpenGLWidgetLab5.cpp  OpenGLWidgetLab5.h  OpenGLWidgetLab6.cpp  OpenGLWidgetLab6.h
labsCompGraphics/compGraphics/ui/splashWindow/: splashwindow.cpp  splashwindow.h  splashwindow.ui
labsOOP/OOP_Game/: .gitignore  CMakeLists.txt  GameHandler.h  GameStart.h  main.cpp
labsOOP/OOP_Game/Characters/: Archer.cpp  Archer.h  Character.cpp  Character.h  Enemy.h  Gargoyle.cpp  Gargoyle.h  MainHero.cpp  MainHero.h  Monster.cpp  Monster.h
labsOOP/OOP_Game/Data/: DataManager.cpp  DataManager.h  GameEntityProperties.txt  KeyboardSettings.txt  ObjectModel.xml
labsOOP/OOP_Game/Entity/: Prototype.h
labsOOP/OOP_Game/Entity/Characters/: Archer.cpp  Archer.h  Character.h  Gargoyle.cpp  Gargoyle.h  MainHero.cpp  MainHero.h  Monster.cpp  Monster.h
labsOOP/OOP_Game/Entity/Objects/: Armor.h  CellObject.cpp  CellObject.h  HealPotion.h  Sword.cpp  Sword.h  Thing.h  ThingsManager.cpp  ThingsManager.h
labsOOP/OOP_Game/KeyControl/: KeyControl.h  KeyDataReader.cpp  KeyDataReader.h  KeyboardControl.cpp  KeyboardControl.h  KeyboardDataReader.cpp  KeyboardDataReader.h
labsOOP/OOP_Game/Logger/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  Logger.cpp  Logger.h  Logger.hpp  LoggerDataAdapter.cpp  LoggerDataAdapter.h  LoggerDataAdapter.hpp  LoggerDefault.cpp  LoggerDefault.hpp  LoggerPull.cpp  LoggerPull.h
labsOOP/OOP_Game/Notes/: AsaveDataSimple.txt  CharactersSpecifications.txt  ObjectProperties.txt  ObjectsModels.txt
labsOOP/OOP_Game/Objects/: Armor.cpp  Armor.h  CellObject.cpp  CellObject.h  HealPotion.cpp  HealPotion.h  Sword.cpp  Sword.h  Thing.cpp  Thing.h  ThingInterface.h  ThingsManager.cpp  ThingsManager.h
labsOOP/OOP_Game/Playground/: playground.cpp
labsOOP/OOP_Game/Rules/: CharacterProperties.cpp  CharacterProperties.h  CharacterRules.h  DifficultDataReader.cpp  DifficultDataReader.h  DifficultPreset.cpp  DifficultPreset.h  GlobalRules.h  RulesChecker.h  RulesPreset.h  RulesPresets.h  ThingProperties.cpp  ThingProperties.h  ThingRules.h
labsOOP/OOP_Game/Rules/Presets/: EasyPreset.h  MiddlePreset.h
labsOOP/OOP_Game/TestingPlayground/: playground.cpp
labsOOP/OOP_Game/Tools/: CellPoint.cpp  CellPoint.h  DifficultDataReader.cpp  DifficultDataReader.h  FieldIterator.cpp  FieldIterator.h  Grid.cpp  Grid.h  Logger.cpp  Logger.hpp  ModelDataReader.cpp  ModelDataReader.h  Printer.cpp  Printer.h  SaveDataAdapter.cpp  SaveDataAdapter.h  SaveDataReader.cpp  SaveDataReader.h  SaveManager.cpp  SaveManager.h
labsOOP/OOP_Game/UI/: Field.cpp  Field.h  FieldScreen.cpp  FieldScreen.h  FightScreen.cpp  FightScreen.h  KeySettingsScreen.cpp  KeySettingsScreen.h  LoadScreen.cpp  LoadScreen.h  StartScreen.cpp  StartScreen.h
labsOOP/OOP_Game/UI/Models/: BuilderDefaultField.cpp  BuilderDefaultField.h  Cell.cpp  Cell.h  Field.cpp  Field.h  FieldBuilder.h
labsOthers/: PhysicsPogreshLabs.py
labsPaAA/: .gitignore
(+171 files in other folders)
